syntax = "proto3";

option go_package = "github.com/XWS-BSEP-Tim-13/Dislinkt_PostService/infrastructure/grpc/proto";

package post;

import "google/api/annotations.proto";

service PostService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/post/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/post"
    };
  }
  rpc GetByUser(GetByUserRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/post/user/{username}"
    };
  }
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Post post = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated Post posts = 1;
}

message GetByUserRequest {
  string username = 1;
}

message Post {
  string id = 1;
  string username = 2;
  string content = 3;
  string image = 4;
  repeated string likes = 5;
  repeated string dislikes = 6;
  repeated Comment comments = 7;
}

message Comment {
  string id = 1;
  string content = 2;
  string date = 3;
  string username = 4;
}
